<resources>
    <string name="app_name">TemplateBottomNavMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="login_with_google">Login</string>
    <string name="menu_management">Management</string>
    <string name="menu_generate_items">Generate Items</string>
    <string name="menu_actions">Actions</string>
    <string name="add_permission">Add Permission</string>
    <string name="example_action">Example Action</string>
    <string name="clear_item_list">Clear Item List</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="write_action_for">Add action for</string>
    <string name="example_permission">This app needs access to example permission</string>
    <string name="already_have_permission">Already have permission</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="action_circular_fragment_a" translatable="false">Circular FragmentA</string>
    <string name="action_circular_fragment_b" translatable="false">Circular FragmentB</string>
</resources>
