<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.templatebottomnavmenu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.templatebottomnavmenu.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.templatebottomnavmenu.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.templatebottomnavmenu.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/fragment_fullscreen_a"
        android:name="com.example.templatebottomnavmenu.ui.circularfragment.CircularFragmentA"
        android:label="@string/action_circular_fragment_a"
        tools:layout="@layout/fragment_circular_a" />

    <fragment
        android:id="@+id/fragment_fullscreen_b"
        android:name="com.example.templatebottomnavmenu.ui.circularfragment.CircularFragmentB"
        android:label="@string/action_circular_fragment_b"
        tools:layout="@layout/fragment_circular_b" />

</navigation>
