<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="Managment">
        <menu>
            <item
                android:id="@+id/action_show_home_test"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/title_home"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_show_notifications_test"
                android:icon="@drawable/ic_baseline_notifications_24"
                android:title="@string/title_notifications"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_show_dashboard_test"
                android:icon="@drawable/ic_baseline_dashboard_24"
                android:title="@string/title_dashboard"
                app:showAsAction="always" />
        </menu>
    </item>

    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/information" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_power_settings_new_24"
                android:title="@string/logout"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>