<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_show_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/title_notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_dashboard"
        app:showAsAction="always" />
</menu>